--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ numpy==1.21.6
 pillow==9.0.1
 pandas==1.3.5
 sentence-transformers==2.2.2
-huggingface-hub==0.4.0
+huggingface-hub==0.11.1  # Specifically between 0.10.0 and 1.0.0
+torch==1.12.1
 transformers==4.25.1
-torch>=1.11.0
 scikit-learn==1.0.2
 gunicorn==20.1.0
 flask-cors==3.0.10
